Activities, About, Register and Guard service pages update

--- a/csiangleur/style.css
+++ b/csiangleur/style.css
@@ -118,7 +118,7 @@ html {
   background-color: #ebebeb;
   font-family: "Muli", "Open Sans", "Helvetica Neue", Helvetica, Arial sans-serif; }
 
-.title{
+.title, .page-title{
     color: #cc1822;
 }
 
