--- a/csiangleur/style.css
+++ b/csiangleur/style.css
@@ -161,9 +161,9 @@ a, .content-link:hover{
 
 .site-title--link {
   display: block;
-  width: 1600px;
   height: 300px;
-  background-image: url("./img/banner.png");
+  width: 100%;
+  background-image: url("./img/banner-320.png");
   background-position: center;
   background-repeat: no-repeat;
   margin: 0 auto;
@@ -176,7 +176,7 @@ a, .content-link:hover{
 }
 
 .gmap-home{
-    width: 300px;
+    width: 100%;
     height: 300px;
 }
 
@@ -203,12 +203,13 @@ a, .content-link:hover{
 }
 
 .navigation .menu-item{
-    display: inline-block;
+    display: block;
+    text-align: center;
     margin: 0;
 }
 
 .navigation .menu-item a {
-  display: inline-block;
+  display: block;
   padding: 0.75em 1.5em;
   background-color: #ebebeb;
   color: #1e1e1e;
@@ -233,14 +234,11 @@ a, .content-link:hover{
 
 .footer {
   width: 80%;
+  max-width: 1024px;
   margin: 0 auto;
   padding: 2em;
   color: #ebebeb;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around; }
+}
 
 .footer-title {
   margin-top: 0; }
@@ -298,7 +296,8 @@ a, .content-link:hover{
 
 .siteplan li {
   line-height: 1.5em;
-  margin-bottom: 0.25em; }
+  margin-bottom: 0.25em;
+    text-align: center;}
 
 .siteplan a {
   color: #ebebeb;
@@ -327,7 +326,9 @@ a, .content-link:hover{
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center; }
-
+.social-link-wrapper{
+    display: block;
+}
 .social-link {
   display: inline-block;
   width: 60px;
@@ -355,21 +356,12 @@ a, .content-link:hover{
 }
 
 .double-column {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
   margin: 2em 0;
 }
 
 .column {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  max-width: 48%;
+  width: 100%;
   text-align: justify;
-    vertical-align: middle;
 }
 
 .img-wrapper {
@@ -400,32 +392,93 @@ a, .content-link:hover{
 
 .button {
   text-align: center;
-  margin: 2em 0; }
+  margin: 2em 0;
+
+  padding: 0.5em 1em;
+  background-color: #cc1822;
+  border-bottom: 2px solid #710d13;
+  border-radius: 0.5em;
+  -webkit-transition: background-color 500ms ease, border-bottom 500ms ease;
+  transition: background-color 500ms ease, border-bottom 500ms ease;
+}
+
+.button:hover{
+    background-color: #9e131a;
+    border-bottom: 2px solid #43080b;
+    -webkit-transition: background-color 500ms ease, border-bottom 500ms ease;
+    transition: background-color 500ms ease, border-bottom 500ms ease;
+}
 
 .button-link {
   text-decoration: none;
   padding: 0.5em 1em;
   font-size: 1.25em;
   font-weight: bold;
-  background-color: #cc1822;
   color: white;
   border: none;
-  border-bottom: 2px solid #710d13;
-  border-radius: 0.5em;
-  -webkit-transition: background-color 500ms ease, color 500ms ease, border-bottom 500ms ease;
-  transition: background-color 500ms ease, color 500ms ease, border-bottom 500ms ease; }
+  width: 100%;
+  -webkit-transition: color 500ms ease;
+  transition: color 500ms ease; }
   .button-link:hover {
-    background-color: #9e131a;
     color: #ebebeb;
-    border-bottom: 2px solid #43080b;
-    -webkit-transition: background-color 500ms ease, color 500ms ease, border-bottom 500ms ease;
-    transition: background-color 500ms ease, color 500ms ease, border-bottom 500ms ease; }
+    -webkit-transition: color 500ms ease;
+    transition: color 500ms ease; }
 
+@media screen and ( min-width: 380px ) {
+    .social-link-wrapper{
+        display: inline;
+    }
+}
 @media screen and ( min-width: 600px ) {
     /*Medium screen (tablets)*/
+    .site-title--link {
+      background-image: url("./img/banner-600.png");
+     }
+     .gmap-home{
+         width: 300px;
+     }
+     .footer {
+       display: -webkit-box;
+       display: -ms-flexbox;
+       display: flex;
+       -ms-flex-pack: distribute;
+       justify-content: space-around; }
+}
+@media screen and ( min-width: 634px ) {
+    .navigation .menu-item{
+        display: inline-block;
+        text-align: right;
+    }
+    .navigation .menu-item a {
+      display: inline-block; }
+}
+@media screen and ( min-width: 800px ) {
+    .double-column {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-pack: distribute;
+      justify-content: space-around;
+    }
 
+    .column {
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1;
+      max-width: 48%;
+    vertical-align: middle;
+    }
 }
 @media screen and ( min-width: 1024px ) {
     /*Large screen (desktop)*/
-
+    .site-title--link {
+      background-image: url("./img/banner-1024.png");
+     }
+}
+@media screen and ( min-width: 1600px ) {
+    /*Large screen (desktop)*/
+    .site-title--link {
+      width: 1600px;
+      background-image: url("./img/banner.png");
+     }
 }
